<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DnD</string>
    <string name="action_about">About</string>
    <string name="action_custom_catacter">Create Custom Character</string>
    <string name="action_random_catacter">Create Random character</string>
    <string name="random_button">Create Random DnD Character</string>
    <string name="inputCharName">Enter Character Name</string>
    <string name="title_activity_main">DnD Character Creator</string>
    <string name="title_RandomSelection">Create Random Character</string>
    <string name="title_CustomSelection">Create Custom Character</string>
    <string name="title_DiceRollSelection">Dice Roller</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_custom_char">CustomCharActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dice_roll">DiceRollActivity</string>
    <string name="extend">This is something that is supposed to be very long and extendive</string>
    <string name="title_section1">Selection 1</string>
    <string name="title_section2">Selection 2</string>
    <string name="title_section3">Selection 3</string>
    <string name="title_activity_about"></string>
    <string name="about_foot">Made for HackFMI 4</string>
    <string name="AppName">Dungeons and Dragons</string>
    <string name="AppNameSub">Pocket Character Creator</string>

    <!-- CustomCharActivity  -->
    <string name="inCharacterName">Enter Character Name</string>
    <string name="inCharacterClass">Enter Character Class</string>
    <string name="inCharacterRace">Enter Character Race</string>
    
 
    <string name="stat_dropdown_def">Rolls</string>
 
    <string-array name="stat_dropdown">

    </string-array>
 
    
</resources>
