<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vortelf.dnd.AboutActivity" 
 	android:id="@+id/about_activity_touch_watcher">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal" >
    
    <TextView 
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
	    android:layout_marginTop="10dp"
        android:textStyle="bold"
		android:textSize="32sp"
		android:text="We actually made something!"
        />
    
    <Button
	        android:id="@+id/Rotor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:visibility="gone" /> 
        
    
     <ImageView
        android:contentDescription="img"
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="fitCenter"
        android:src="@drawable/dfmi" />
    
    <TextView
        android:id="@+id/AppName"
        android:layout_marginBottom="0dp"
        android:layout_below="@id/logo"
        android:textStyle="bold"
		android:textSize="20sp"
		android:gravity="center_horizontal"
		android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AppName"
		/>
    <TextView
        android:id="@+id/AppNameSub"
        android:layout_marginBottom="0dp"
        android:layout_below="@id/AppName"
        android:textStyle="bold"
		android:textSize="18sp"
		android:gravity="center_horizontal"
		android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AppNameSub"
		/>     
    
    <TextView
        android:id="@+id/MadeFor"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/about_foot"
        android:layout_below="@id/AppNameSub"
        />

   </RelativeLayout>
 </ScrollView>
</RelativeLayout>
