<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vortelf.dnd.CustomCharActivity" >


    

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/CharacterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:hint="@string/inCharacterName"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/CharacterRace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/CharacterName"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:hint="@string/inCharacterRace"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/CharacterClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/CharacterRace"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:hint="@string/inCharacterClass"
                android:inputType="textCapSentences" />
            
            
            
            
            
            
            
            
            
            
            
            
            
            
            
<TableLayout
    android:id="@+id/stat_table"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/CharacterClass"
    android:orientation="horizontal"
    android:layout_centerHorizontal="true">
    
    
    <TableRow>
		<LinearLayout android:id="@+id/str_def"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="12dp"
	    android:layout_alignBottom="@+id/dex_def"
	    android:orientation="vertical"  >
                <TextView
                    android:id="@+id/str_dropdown_def"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Strength"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/str_dropdown"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
					android:layout_gravity="right"
                    android:entries="@array/stat_dropdown"
                    android:prompt="@string/stat_dropdown_def" 
                    android:padding="10dp"/>
            </LinearLayout>
            
        <LinearLayout android:id="@+id/dex_def"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="12dp"
	    android:layout_alignBottom="@+id/con_def"
	    android:orientation="vertical"  >
                <TextView
                    android:id="@+id/dex_dropdown_def"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Dexterity"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/dex_dropdown"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
					android:layout_gravity="right"
                    android:entries="@array/stat_dropdown"
                    android:prompt="@string/stat_dropdown_def" 
                    android:padding="10dp"/>
            </LinearLayout>
		<LinearLayout android:id="@+id/con_def"
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="12dp"
	    android:layout_alignBottom="@+id/int_def"
	    android:orientation="vertical"  >
                <TextView
                    android:id="@+id/con_dropdown_def"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Constitution"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/con_dropdown"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
					android:layout_gravity="right"
                    android:entries="@array/stat_dropdown"
                    android:prompt="@string/stat_dropdown_def" 
                    android:padding="10dp"
                    />
            </LinearLayout>
            </TableRow>
            
    <TableRow >
		<LinearLayout android:id="@+id/int_def"
		        android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:padding="12dp"
			    android:layout_alignBottom="@+id/wis_def"
			    android:orientation="vertical"  >
		                <TextView
		                    android:id="@+id/int_dropdown_def"
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:text="Intelligence"
		                    android:textSize="18sp" />
		
		                <Spinner
		                    android:id="@+id/int_dropdown"
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
							android:layout_gravity="right"
		                    android:entries="@array/stat_dropdown"
		                    android:prompt="@string/stat_dropdown_def" 
		                    android:padding="10dp"/>
		            </LinearLayout>
		<LinearLayout android:id="@+id/wis_def"
		        android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:padding="12dp"
			    android:layout_alignBottom="@+id/cha_def"
			    android:orientation="vertical"  >
		                <TextView
		                    android:id="@+id/wis_dropdown_def"
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:text="Wisdom"
		                    android:textSize="18sp" />
		
		                <Spinner
		                    android:id="@+id/wis_dropdown"
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
							android:layout_gravity="right"
		                    android:entries="@array/stat_dropdown"
		                    android:prompt="@string/stat_dropdown_def" 
		                    android:padding="10dp"/>
		            </LinearLayout>
		<LinearLayout android:id="@+id/cha_def"
		        android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:padding="12dp"
			    android:orientation="vertical"  >
		                <TextView
		                    android:id="@+id/cha_dropdown_def"
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:text="Charisma"
		                    android:textSize="18sp" />
		
		                <Spinner
		                    android:id="@+id/cha_dropdown"
		                    android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
							android:layout_gravity="right"
		                    android:entries="@array/stat_dropdown"
		                    android:prompt="@string/stat_dropdown_def" 
		                    android:padding="10dp"/>
		            </LinearLayout>
			</TableRow>     
    </TableLayout> 
    
    
     

			
            <Button
                android:id="@+id/CustomCharSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/stat_table"
                android:layout_marginTop="41dp"
                android:text="Submit!" />

            <TextView
                android:id="@+id/OutInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CustomCharSubmit"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textSize="22sp" />
        </RelativeLayout>
        

        
    </ScrollView>

</RelativeLayout>
